--- a/app/src/main/res/layout/profile_view.xml
+++ b/app/src/main/res/layout/profile_view.xml
@@ -13,69 +13,26 @@
         android:layout_height="wrap_content"
         android:padding="16dp">
 
-        <View
-            android:id="@+id/topHeaderLine"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_marginTop="16dp"
-            android:background="@color/yellow"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/logoImageView"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:contentDescription="@string/app_name"
-            android:scaleType="fitCenter"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/topHeaderLine"
-            android:src="@drawable/icon_logo" />
-
         <TextView
             android:id="@+id/headerTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="@string/profile"
             android:textColor="@android:color/white"
             android:textSize="18sp"
-            android:gravity="center"
-            app:layout_constraintBottom_toBottomOf="@id/logoImageView"
-            app:layout_constraintEnd_toStartOf="@id/profileIconImageView"
-            app:layout_constraintStart_toEndOf="@id/logoImageView"
-            app:layout_constraintTop_toTopOf="@id/logoImageView" />
-
-        <ImageView
-            android:id="@+id/profileIconImageView"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginEnd="16dp"
-            android:contentDescription="@string/profile_icon_desc"
-            android:src="@drawable/icon_logo"
-            app:layout_constraintBottom_toBottomOf="@id/logoImageView"
+            app:layout_constraintBottom_toTopOf="@+id/textView_profileName"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/logoImageView" />
-
-        <View
-            android:id="@+id/bottomHeaderLine"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:background="@color/yellow"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/logoImageView"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/textView_profileName"
             style="@style/ProfileInfoBox"
-            android:layout_marginTop="32dp"
-            tools:text="Name"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/bottomHeaderLine" />
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="148dp"
+            tools:text="Name" />
 
         <TextView
             android:id="@+id/textView_profileSurname"
